[SPARK-52437][BUILD] Ensure `Annotation Processing` in Java compilation for Java 23+
### What changes were proposed in this pull request?

This PR aims to ensure `Annotation Processing` in Java compilation.

### Why are the changes needed?

Since JDK 23, `Annotation Processing` is disabled by default. We need to enable it explicitly to be consistent across Java 17/21/25.
- [JDK 23: Changes Default Annotation Processing Policy](https://inside.java/2024/06/18/quality-heads-up/)

For example, `Launcher` fails without this.

### How was this patch tested?

Manual test since we didn't add JDK23+ CI yet.

**Java 25-EA**

```
$ java -version
openjdk version "25-ea" 2025-09-16
OpenJDK Runtime Environment (build 25-ea+26-3358)
OpenJDK 64-Bit Server VM (build 25-ea+26-3358, mixed mode, sharing)
```

**BEFORE**

```
$ mvn package
...
[INFO] ------------------------------------------------------------------------
[INFO] Reactor Summary for Spark Project Parent POM 4.1.0-SNAPSHOT:
[INFO]
[INFO] Spark Project Parent POM ........................... SUCCESS [  2.604 s]
[INFO] Spark Project Tags ................................. SUCCESS [  5.236 s]
[INFO] Spark Project Sketch ............................... SUCCESS [  9.123 s]
[INFO] Spark Project Common Utils ......................... SUCCESS [ 17.486 s]
[INFO] Spark Project Local DB ............................. SUCCESS [ 10.095 s]
[INFO] Spark Project Networking ........................... SUCCESS [01:01 min]
[INFO] Spark Project Shuffle Streaming Service ............ SUCCESS [ 11.162 s]
[INFO] Spark Project Variant .............................. SUCCESS [  2.899 s]
[INFO] Spark Project Unsafe ............................... SUCCESS [ 11.482 s]
[INFO] Spark Project Connect Shims ........................ SUCCESS [  2.701 s]
[INFO] Spark Project Launcher ............................. FAILURE [  5.519 s]
```

**AFTER**

```
$ mvn package
...
[INFO] ------------------------------------------------------------------------
[INFO] React